Back to Java 17