@@ -27,14 +27,7 @@ Compile / compileOrder := CompileOrder.JavaThenScala
 
 // Run options
 run / fork := true
-run / javaOptions := Seq(
-  "-Xms1G",
-  "-Xmx8G",
-  // Needed until Scala 3.8: https://www.scala-lang.org/blog/next-scala-lts.html
-  "--sun-misc-unsafe-memory-access=allow",
-  // 'A restricted method in java.lang.System has been called by tools.aqua.turnkey.support.TurnKey'
-  "--enable-native-access=ALL-UNNAMED"
-)
+run / javaOptions := Seq("-Xms1G", "-Xmx8G")
 run / outputStrategy := Some(StdoutOutput)
 
 // Test options
